--- a/data/addons.toml
+++ b/data/addons.toml
@@ -192,9 +192,9 @@ authorHome = ""
 support = "Community"
 
 [addons.resgate]
-name = "A RES gateway"
+name = "Resgate"
 home = "https://github.com/jirenius/resgate"
-description = "Web APIs with real-time resources in a simple way.  A real-time API gateway for the RES protocol with NATS server as messaging system."
+description = "A Realtime + REST API Gateway for NATS to create web APIs with live data. It supports access control, caching, scaling, queries, and more."
 author = "Samuel Jirénius"
 authorHome = "https://github.com/jirenius"
 support = "Community"
