update release versions/date for node-nats, node-nats-streaming, ts-nats

--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -116,13 +116,28 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.8.2
+  version_num: 1.0.1
   release_notes: |
-    Release v.0.8.2 on March 1st, 2018.
+    Release v.1.0.1 on July 20th, 2018.
   github:
     - user: nats-io
       repo: node-nats
       link: https://github.com/nats-io/node-nats
+
+- name: TypeScript Node NATS
+  type: nats-client
+  supported: true
+  language: TypeScript
+  author:
+    - name:
+      link:
+  version_num: 1.0.2
+  release_notes: |
+    Release v.1.0.2 on August 10th, 2018.
+  github:
+    - user: nats-io
+      repo: ts-nats
+      link: https://github.com/nats-io/ts-nats
 
 - name: Python Asyncio
   type: nats-client
@@ -524,9 +539,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.0.28
+  version_num: 0.0.40
   release_notes: |
-    Last updated on March 2nd, 2018.
+    Release 0.0.40 on May 1st, 2018.
   github:
     - user: nats-io
       repo: node-nats-streaming
