--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -539,9 +539,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 2.1.0
+  version_num: 2.1.3
   release_notes: |
-    Release 2.1.0 on September 18th, 2018
+    Release 2.1.3 on January 4, 2019
   github:
     - user: nats-io
       repo: java-nats-streaming
