update upcoming events

--- a/data/events.toml
+++ b/data/events.toml
@@ -7,6 +7,22 @@ where = "Excel, London"
 ref = "https://www.cloudexpoeurope.com/"
 
 [[events]]
+venue = "OSCON"
+when = "July 18, 2019"
+who = "Derek Collison"
+what = "Time to Think Different. Decoupling Distributed Systems from IP Networks"
+where = "Portland, OR"
+ref = "https://conferences.oreilly.com/oscon/oscon-or/public/schedule/detail/75998"
+
+[[events]]
+venue = "OSCON"
+when = "July 17, 2019"
+who = "Waldemar Quevedo"
+what = "Simple, Secure & Reliable: Building Cloud Native Applications with NATS"
+where = "Portland, OR"
+ref = "https://conferences.oreilly.com/oscon/oscon-or/public/schedule/detail/75899"
+
+[[events]]
 venue = "Open Go"
 when = "September 23-25, 2019"
 who = "Waldemar Quevedo"
@@ -14,19 +30,11 @@ what = "TBD"
 where = "Seminole Hard Rock Hotel & Casino | Hollywood, FL"
 ref = "https://opengo.io"
 
-[[icymi]]
- venue = "ICYMI"
- when = "December 11, 2018"
- who = "Colin Sullivan & Waldemar Quevedo"
- what = "Intro to NATS"
- link = "https://youtu.be/EI6clwKZ-qs"
- where = "Kubecon + CloudNativeCon Seattle 2018"
- ref = "https://kccna18.sched.com/event/Grbt"
-
- [[icymi]]
-  when = "December 13, 2018"
-  who = "Colin Sullivan & Waldemar Quevedo"
-  what = "NATS Deep Dive"
-  link = "https://youtu.be/wBJj0UbcZuU"
-  where = "Kubecon + CloudNativeCon Seattle 2018"
-  ref = "https://kccna18.sched.com/event/Grdm"
+# comment out to save
+#[[icymi]]
+# venue = "ICYMI"
+#when = "December 11, 2018"# who = "Colin Sullivan & Waldemar Quevedo"
+#what = "Intro to NATS"
+# link = "https://youtu.be/EI6clwKZ-qs"
+# where = "Kubecon + CloudNativeCon Seattle 2018"
+# ref = "https://kccna18.sched.com/event/Grbt"
