--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -86,9 +86,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 1.7.0
+  version_num: 1.7.2
   release_notes: |
-    Release v1.7.0 on December 11th, 2018.
+    Release v1.7.2 on February 21st, 2019.
   github:
     - user: nats-io
       repo: go-nats
