--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "gm": "^1.23.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
