--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -101,9 +101,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 2.4.0
+  version_num: 2.4.2
   release_notes: |
-    Release 2.4.0 on December 18th, 2018.
+    Release 2.4.2 on March 22, 2019.
   github:
     - user: nats-io
       repo: jnats
