Update Go NATS Streaming to 0.4.5 and update repo link
This was a release for the repo name change.

Signed-off-by: Ivan Kozlovic <ivan@synadia.com>

--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -521,13 +521,13 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.4.4
+  version_num: 0.4.5
   release_notes: |
-    Release v0.4.4 on May 9th, 2019.
+    Release v0.4.5 on May 16th, 2019.
   github:
     - user: nats-io
-      repo: go-nats-streaming
-      link: https://github.com/nats-io/go-nats-streaming
+      repo: stan.go
+      link: https://github.com/nats-io/stan.go/
 
 - name: C#
   type: streaming-client
