--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -698,29 +698,29 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.14.1
+  version_num: 0.14.2
   release_notes: |
-    Release v0.14.1 April 26th, 2019.
+    Release v0.14.2 May 22nd, 2019.
   github:
     - user: nats-io
       repo: nats-streaming-server
       link: https://github.com/nats-io/nats-streaming-server
   links:
-  - name: nats-streaming-server-v0.14.1-darwin-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.1/nats-streaming-server-v0.14.1-darwin-amd64.zip
-  - name: nats-streaming-server-v0.14.1-linux-386.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.1/nats-streaming-server-v0.14.1-linux-386.zip
-  - name: nats-streaming-server-v0.14.1-linux-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.1/nats-streaming-server-v0.14.1-linux-amd64.zip
-  - name: nats-streaming-server-v0.14.1-linux-arm6.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.1/nats-streaming-server-v0.14.1-linux-arm6.zip
-  - name: nats-streaming-server-v0.14.1-linux-arm7.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.1/nats-streaming-server-v0.14.1-linux-arm7.zip
-  - name: nats-streaming-server-v0.14.1-linux-arm64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.1/nats-streaming-server-v0.14.1-linux-arm64.zip
-  - name: nats-streaming-server-v0.14.1-windows-386.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.1/nats-streaming-server-v0.14.1-windows-386.zip
-  - name: nats-streaming-server-v0.14.1-windows-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.1/nats-streaming-server-v0.14.1-windows-amd64.zip
+  - name: nats-streaming-server-v0.14.2-darwin-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.2/nats-streaming-server-v0.14.2-darwin-amd64.zip
+  - name: nats-streaming-server-v0.14.2-linux-386.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.2/nats-streaming-server-v0.14.2-linux-386.zip
+  - name: nats-streaming-server-v0.14.2-linux-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.2/nats-streaming-server-v0.14.2-linux-amd64.zip
+  - name: nats-streaming-server-v0.14.2-linux-arm6.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.2/nats-streaming-server-v0.14.2-linux-arm6.zip
+  - name: nats-streaming-server-v0.14.2-linux-arm7.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.2/nats-streaming-server-v0.14.2-linux-arm7.zip
+  - name: nats-streaming-server-v0.14.2-linux-arm64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.2/nats-streaming-server-v0.14.2-linux-arm64.zip
+  - name: nats-streaming-server-v0.14.2-windows-386.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.2/nats-streaming-server-v0.14.2-windows-386.zip
+  - name: nats-streaming-server-v0.14.2-windows-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.14.2/nats-streaming-server-v0.14.2-windows-amd64.zip
   - name: Official Docker Image
     url: https://hub.docker.com/_/nats-streaming/
