--- a/config.toml
+++ b/config.toml
@@ -80,7 +80,7 @@ parent = "nats-streaming"
 name = "Documentation"
 weight = 3
 identifier = "doc"
-url = "/documentation"
+url = "https://nats-io.github.io/docs"
 
 [[menu.main]]
 name = "Getting Started With NATS"
