--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -101,9 +101,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 2.5.1
+  version_num: 2.5.2
   release_notes: |
-    Release 2.5.1 on June 5, 2019.
+    Release 2.5.2 on June 19, 2019.
   github:
     - user: nats-io
       repo: jnats
@@ -191,9 +191,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.10.0
+  version_num: 0.11.0
   release_notes: |
-    Release v0.10.0 August 31st, 2018.
+    Release v0.11.0 June 9, 2019.
   github:
     - user: nats-io
       repo: ruby-nats
@@ -206,9 +206,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.5.0
+  version_num: 0.6.0
   release_notes: |
-    Release v0.5.0 on April 4th, 2018.
+    Release v0.6.0 on June 19, 2019.
   github:
     - user: nats-io
       repo: pure-ruby-nats
