--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -664,30 +664,30 @@ Releases:
   author:
     - name:
       link:
-  version_num: 2.0.0
+  version_num: 2.0.2
   release_notes: |
-    Release v2.0.0 on June 5, 2019.
+    Release v2.0.2 on July 15th, 2019.
   github:
     - user: nats-io
       repo: nats-server
       link: https://github.com/nats-io/nats-server
   links:
-  - name: nats-server-v2.0.0-darwin-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.0.0/nats-server-v2.0.0-darwin-amd64.zip
-  - name: nats-server-v2.0.0-linux-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.0.0/nats-server-v2.0.0-linux-amd64.zip
-  - name: nats-server-v2.0.0-linux-386.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.0.0/nats-server-v2.0.0-linux-386.zip
-  - name: nats-server-v2.0.0-linux-arm6.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.0.0/nats-server-v2.0.0-linux-arm6.zip
-  - name: nats-server-v2.0.0-linux-arm7.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.0.0/nats-server-v2.0.0-linux-arm7.zip
-  - name: nats-server-v2.0.0-linux-arm64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.0.0/nats-server-v2.0.0-linux-arm64.zip
-  - name: nats-server-v2.0.0-windows-386.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.0.0/nats-server-v2.0.0-windows-386.zip
-  - name: nats-server-v2.0.0-windows-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.0.0/nats-server-v2.0.0-windows-amd64.zip
+  - name: nats-server-v2.0.2-darwin-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.0.2/nats-server-v2.0.2-darwin-amd64.zip
+  - name: nats-server-v2.0.2-linux-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.0.2/nats-server-v2.0.2-linux-amd64.zip
+  - name: nats-server-v2.0.2-linux-386.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.0.2/nats-server-v2.0.2-linux-386.zip
+  - name: nats-server-v2.0.2-linux-arm6.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.0.2/nats-server-v2.0.2-linux-arm6.zip
+  - name: nats-server-v2.0.2-linux-arm7.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.0.2/nats-server-v2.0.2-linux-arm7.zip
+  - name: nats-server-v2.0.2-linux-arm64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.0.2/nats-server-v2.0.2-linux-arm64.zip
+  - name: nats-server-v2.0.2-windows-386.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.0.2/nats-server-v2.0.2-windows-386.zip
+  - name: nats-server-v2.0.2-windows-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.0.2/nats-server-v2.0.2-windows-amd64.zip
   - name: Official Docker Image
     url: https://hub.docker.com/_/nats/
 
