--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -23,9 +23,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 1.8.0
+  version_num: 2.0.0
   release_notes: |
-    Release v1.8.0 on October 17th, 2018.
+    Release v2.0.0 on July 26th, 2019.
   github:
     - user: nats-io
       repo: nats.c
@@ -38,13 +38,13 @@ Releases:
   author:
     - name:
       link:
-  version_num: 1.8.0
+  version_num: 2.0.0
   release_notes: |
-    Release v1.8.0 on October 17th, 2018.
+    Release v2.0.0 on July 26th, 2019.
   github:
     - user: nats-io
-      repo: c-nats-streaming
-      link: https://github.com/nats-io/cnats
+      repo: stan.c
+      link: https://github.com/nats-io/nats.c
 
 - name: C#
   type: nats-client
