update http to https to resolve mixed-content alert from Netlify

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://nats.io/"
+baseURL = "https://nats.io/"
 languageCode = "en-us"
 defaultLanguage = "en"
 title = "NATS - Cloud Native, Open Source, High Performance Messaging"
